[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/mangaka-1.jpg" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Script/Control.gd" type="Script" id=3]
[ext_resource path="res://Script/Transisi.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "transisi"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 4.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 414.0

[node name="btn_mangaka" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 124.0
margin_right = 900.0
margin_bottom = 406.0
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 418.0
margin_right = 1024.0
margin_bottom = 488.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_back" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 456.0
margin_right = 568.0
margin_bottom = 70.0
size_flags_vertical = 0
text = "BACK"
icon = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/RESET = SubResource( 1 )
anims/transisi = SubResource( 2 )

[connection signal="pressed" from="VBoxContainer/CenterContainer/btn_mangaka" to="." method="_on_btn_mangaka_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/btn_back" to="." method="_on_btn_back_pressed"]
